# pose-translation

./: Dockerfile  Makefile  README.md  animate.py  app.py  ma.py  pyproject.toml  requirements.txt
configs/prompts/: animation.yaml
docs/: mkdocs.yml
docs/docs/: index.md
magicanimate/models/: mutual_self_attention.py
vid2densepose/: generate_densepose.py  requirements.txt
