[tool.poetry]
name = "pose_translation"
version = "0.0.1"
description = "A short description of the project."
authors = ["FuturePrompters"]
license = "BSD-3-Clause" 
readme = "README.md"

[tool.poetry.dependencies]
python = "~=3.11"
loguru = "*"
pip = "*"
python-dotenv = "*"
setuptools = "*"
typer = "*"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
isort = "*"
mkdocs = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
